Changed hotelrecommender to use public transport time and not air distance.