@@ -2,53 +2,36 @@ package dat251_gruppe2.hotelifinder.services;
 
 import dat251_gruppe2.hotelifinder.domain.Venue;
 import dat251_gruppe2.hotelifinder.domain.Hotel;
-
+import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class HotelRecommender {
-    /**
-     * Input hotels
-     */
-    private List<Hotel> hotels;
-    /**
-     * Input activities
-     */
-    private List<Venue> selectedActivities;
+    private final List<Hotel> hotels;
+    private final List<Venue> selectedActivities;
+    private final Map<Hotel, Integer> recommendations;
+    private final List<Hotel> sortedHotels;
 
-    /**
-     * Calculated recommendations.
-     * This contains hotels with their total travel time.
-     */
-    private Map<Hotel, Integer> recommendations;
-    /**
-     * The same hotels as input, sorted by total travel time.
-     */
-    private List<Hotel> sortedHotels;
-
-    /**
-     * The strategy to calculate distance.
-     * To be changed to Google API in production.
-     */
-    private TravelTimeCalculator travelTimeService = new RawDistanceTravelTime();
-
-    public HotelRecommender(List<Hotel> hotels, List<Venue> selectedActivities) {
+    public HotelRecommender(List<Hotel> hotels, List<Venue> selectedActivities) throws IOException {
         this.hotels = hotels;
         this.selectedActivities = selectedActivities;
 
-        this.recommendations = calculateRecommendations();
+        List<String> venueNames = selectedActivities.stream()
+                .map(Venue::getName)
+                .collect(Collectors.toList());
+
+        JsonDistanceTravelTime travelTimeService = new JsonDistanceTravelTime("hotels.json", venueNames);
+        this.recommendations = calculateRecommendations(travelTimeService);
         this.sortedHotels = sortHotels(recommendations);
     }
 
-    private Map<Hotel, Integer> calculateRecommendations() {
-        HashMap<Hotel, Integer> recommendations = new HashMap<Hotel, Integer>();
+    private Map<Hotel, Integer> calculateRecommendations(JsonDistanceTravelTime travelTimeService) {
+        Map<Hotel, Integer> recommendations = new HashMap<>();
 
         for (Hotel hotel : hotels) {
             int totalTravelTime = 0;
             for (Venue venue : selectedActivities) {
-                Integer travelTime = travelTimeService.calculateTravelTime(
-                        hotel.getLocation(),
-                        venue.getLocation());
-                totalTravelTime += travelTime;
+                totalTravelTime += travelTimeService.getTravelTime(hotel.getName(), venue.getName());
             }
             recommendations.put(hotel, totalTravelTime);
         }
@@ -56,22 +39,17 @@ public class HotelRecommender {
         return recommendations;
     }
 
+    // Rest of your existing methods remain the same...
     private List<Hotel> sortHotels(Map<Hotel, Integer> recommendations) {
-        sortedHotels = new ArrayList<Hotel>(recommendations.keySet());
-        sortedHotels.sort(Comparator.comparingInt(recommendations::get));
-        return sortedHotels;
+        List<Hotel> sorted = new ArrayList<>(recommendations.keySet());
+        sorted.sort(Comparator.comparingInt(recommendations::get));
+        return sorted;
     }
 
     public Hotel getBestHotel() {
-        Hotel hotel = this.sortedHotels.getFirst();
-        return hotel;
+        return sortedHotels.isEmpty() ? null : sortedHotels.get(0);
     }
 
-    /**
-     * Get the recommended hotels.
-     *
-     * @return A list of hotels sorted by total travel time (ascending order).
-     */
     public List<Hotel> getHotels() {
         return sortedHotels.stream().limit(3).toList();
     }
